styles fixed to app looks better on mobiles

--- a/simple-to-do/css/style.css
+++ b/simple-to-do/css/style.css
@@ -5,9 +5,9 @@ body {
   flex-direction: column;
   align-items: center;
   font-family: 'Roboto', sans-serif;
-  width: 480px;
+  max-width: 480px;
   margin: 0 auto;
-  padding-top: 10px; 
+  padding: 10px; 
 }
 body>* {
   width: 100%;
